# rblx-godot

./: Cargo.toml  README.md
.github/workflows/: rust.yml
godot/: extension_list.cfg  node.gd  node.tscn  project.godot  test.lua
godot/addons/rblx-godot/: ConsoleInterface.tscn  console.tres  icon.png.import  rblx-godot.gdextension
rblx-godot-derive/: .gitignore  Cargo.toml
rblx-godot-derive/src/: lib.rs  parse.rs  utils.rs
roblox-to-godot-project-derive/src/: lib.rs  parse.rs
src/: lib.rs
src/core/: assert_gdext_api.rs  fastflags.rs  inheritance.rs  instance.rs  instance_repl_table.rs  instance_tag_collection.rs  lua_macros.rs  mod.rs  pointers.rs  rw_lock.rs  scheduler.rs  security.rs  state.rs  vm.rs  watchdog.rs
src/core/alloc/: alloc_trait.rs  global.rs  mod.rs  paged_alloc.rs
src/core/rc/: inheriting_rc.rs  mod.rs  threaded_rc.rs
src/godot_vm_bindings/: mod.rs  startup_message.rtf  vm_node.rs
src/instance/: actor.rs  data_model.rs  instance.rs  log_service.rs  mod.rs  model.rs  object.rs  pvinstance.rs  run_service.rs  script.rs  service_provider.rs  workspace.rs
src/userdata/: axes.rs  cframe.rs  events.rs  instance.rs  mod.rs  vectors.rs
src/userdata/enums/: animator_retargeting_mode.rs  avatar_unification_mode.rs  axis.rs  client_animator_throttling_mode.rs  fluid_forces.rs  i_k_control_constraint_support.rs  mesh_part_heads_and_accessories.rs  message_type.rs  mod.rs  model_level_of_detail.rs  model_streaming_behavior.rs  model_streaming_mode.rs  mover_constraint_root_behavior_mode.rs  normal_id.rs  normalid.rs  physics_stepping_method.rs  (+13 more)
(+4 files in other folders)
