[package]
name = "rblx-godot"
authors = ["Radiant", "rblx-godot contributors"]
description = "Roblox To Godot Project, allowing you to run Roblox games inside Godot"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/rblx-godot/rblx-godot"
version = "0.2.0-indev"


[features]
deadlock_detection = ["parking_lot/deadlock_detection"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_reflect = "0.15.1"
godot = { version = "0.2.1", features = ["register-docs"] }
r2g_mlua = { version = "0.10.3", features = ["luau", "luau-jit", "macros", "async", "vendored"] }
parking_lot = { version = "0.12.3", features = [] }
rustversion = "1.0.19"
rustversion-detect = "0.1.3"
rblx-godot-derive = { path = "./rblx-godot-derive" }

[workspace]

members = ["rblx-godot-derive"]
